--- a/Todo/src/app/home/home.component.html
+++ b/Todo/src/app/home/home.component.html
@@ -1,3 +1,24 @@
-<p>
-  home works!
-</p>
+<div class="container color-dark">
+	<div class="col">
+		<p>Добавить новую цель</p>
+	</div>
+	<div class="col">
+		<p>Список целей</p>
+	</div>
+</div>
+<div class="container color-light">
+	<div class="col">
+		<p class="sm">Используйте форму ниже что бы добавить что нужно сделать</p>
+
+		<form>
+			<input type="text" class="txt" name="item" placeholder="Новая цель">
+			<input type="submit" class="btn" value="Добавить">
+		</form>
+	</div>
+	<div class="col">
+		<p class="goal-container">
+			Изучить Angular
+		</p>
+	</div>
+</div>
+
