--- a/Todo/src/app/home/home.component.scss
+++ b/Todo/src/app/home/home.component.scss
@@ -38,3 +38,14 @@ input.btn {
 	cursor:pointer;
 	font-size:16px;
 }
+
+.current-goal{
+	margin-top:0;
+	color: #eee;
+}
+
+.delete{
+	float: right;
+	font-size:30px;
+	margin:-10px 2px 0 0;
+}
