--- a/Todo/src/app/home/home.component.scss
+++ b/Todo/src/app/home/home.component.scss
@@ -49,3 +49,15 @@ input.btn {
 	font-size:30px;
 	margin:-10px 2px 0 0;
 }
+
+@media only screen and (max-width: 767px) {
+	.hide{
+		display: none;
+	}
+	.container {
+		display: block;
+	}
+	.body{
+		padding:15px;
+	}
+}
