--- a/Todo/src/styles.scss
+++ b/Todo/src/styles.scss
@@ -27,3 +27,12 @@ a{
 	color: #fff;
 	text-decoration: none;
 }
+
+@media only screen and (max-width: 767px) {
+	body{
+		padding:15px;
+	}
+	ul li a{
+		font-size:1.25em;
+	}
+}
