Добавление сервиса для обмена данными между компонентами

--- a/Todo/src/app/about/about.component.html
+++ b/Todo/src/app/about/about.component.html
@@ -1,3 +1,9 @@
 <p>
   Здесь может находится подробное описание приложения. А так же список задач с главной страницы:
 </p>
+
+<ul class="about">
+	<li *ngFor="let goal of goals">
+		{{ goal }}
+	</li>
+</ul>
