--- a/Todo/src/app/about/about.component.scss
+++ b/Todo/src/app/about/about.component.scss
@@ -1,4 +1,7 @@
 .about li{
 	background: rgba(39, 39, 39, 0.2);
 	padding:5px;
+	line-height:20px;
+	margin-bottom:10px;
+	display: inline-block;
 }
